app-two/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-second
  namespace: dev
spec:
  type: ClusterIP
  selector:
    app: test-second
  ports:
  - name: http
    port: 8080
    targetPort: 3000
