app-two/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-two-ingress
  namespace: dev
  annotations:
    kubernetes.io/ingress.class: "nginx"
    # nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  # defaultBackend:
  #   service:
  #     name: test-second
  #     port:
  #       number: 8080
  rules:
  - host: kubernetes.docker.internal
    http:
      paths:
      # - path: /one/?(.*)
      #   pathType: Prefix
      #   backend:
      #     service:
      #       name: test-first
      #       port:
      #         number: 8080
      - path: /two/?(.*)
        pathType: Prefix
        backend:
          service:
            name: test-second
            port:
              number: 8080
